# gal-examples

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  gal-example-01-HelloWorld.c  mainGLFW3.c  mainSDL2.c
.github/ISSUE_TEMPLATE/: bug_report.md
shaders/: color.frag  color.vert  default.frag  default.vert
